@@ -36,6 +36,7 @@
 - Fix: [#20642] Track list is sometimes empty due to uninitialized data for the filter string.
 - Fix: [#20659] Phantom rides remain when closing construction window while paused.
 - Fix: [#20684] Footpath additions getting removed by Miniature railway ghost elements.
+- Fix: [#20693] Incorrect information shown when hovering over station when another station before it was removed.
 
 0.4.5 (2023-05-08)
 ------------------------------------------------------------------------
